compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__place__tests__array_value_indexing_in_loop.snap
---
source: compiler/zrc_codegen/src/expr/place.rs
description: "fn test() {\n    let x: [3]i32 = [1i32, 2i32, 3i32];\n    let sum = 0;\n    \n    // TEST: This tests that the temporary allocation for array value\n    // indexing happens in the entry block, not inside the loop.\n    // The alloca for array_tmp should appear at the top of the function.\n    for (let i = 0; i < 3; i++) {\n        sum = sum + x[i as usize];\n    }\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define {} @test() !dbg !3 {
entry:
  %array_tmp6 = alloca [3 x i32], align 4
  %let_i = alloca i32, align 4
  %let_sum = alloca i32, align 4
  %let_x = alloca [3 x i32], align 4
  %array_tmp = alloca [3 x i32], align 4, !dbg !8
  %elem_ptr = getelementptr i32, ptr %array_tmp, i64 0, !dbg !11
  store i32 1, ptr %elem_ptr, align 4, !dbg !11
  %elem_ptr1 = getelementptr i32, ptr %array_tmp, i64 1, !dbg !12
  store i32 2, ptr %elem_ptr1, align 4, !dbg !12
  %elem_ptr2 = getelementptr i32, ptr %array_tmp, i64 2, !dbg !13
  store i32 3, ptr %elem_ptr2, align 4, !dbg !13
  %array_val = load [3 x i32], ptr %array_tmp, align 4, !dbg !13
  store [3 x i32] %array_val, ptr %let_x, align 4, !dbg !14
  store i32 0, ptr %let_sum, align 4, !dbg !15
  store i32 0, ptr %let_i, align 4, !dbg !16
  br label %header, !dbg !16

header:                                           ; preds = %latch, %entry
  %load = load i32, ptr %let_i, align 4, !dbg !17
  %cmp = icmp ult i32 %load, 3, !dbg !18
  br i1 %cmp, label %body, label %exit, !dbg !18

body:                                             ; preds = %header
  %load3 = load i32, ptr %let_sum, align 4, !dbg !19
  %load4 = load [3 x i32], ptr %let_x, align 4, !dbg !21
  %load5 = load i32, ptr %let_i, align 4, !dbg !22
  %cast = sext i32 %load5 to i64, !dbg !22
  store [3 x i32] %load4, ptr %array_tmp6, align 4, !dbg !22
  %gep = getelementptr i32, ptr %array_tmp6, i64 %cast, !dbg !22
  %load7 = load i32, ptr %gep, align 4, !dbg !22
  %add = add i32 %load3, %load7, !dbg !22
  store i32 %add, ptr %let_sum, align 4, !dbg !23
  br label %latch, !dbg !23

latch:                                            ; preds = %body
  %load8 = load i32, ptr %let_i, align 4, !dbg !24
  %inc = add i32 %load8, 1, !dbg !24
  store i32 %inc, ptr %let_i, align 4, !dbg !24
  br label %header, !dbg !24

exit:                                             ; preds = %header
  ret {} zeroinitializer, !dbg !25
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 2, column: 21, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 1, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 11)
!11 = !DILocation(line: 2, column: 22, scope: !9)
!12 = !DILocation(line: 2, column: 28, scope: !9)
!13 = !DILocation(line: 2, column: 34, scope: !9)
!14 = !DILocation(line: 2, column: 9, scope: !9)
!15 = !DILocation(line: 3, column: 9, scope: !9)
!16 = !DILocation(line: 8, column: 14, scope: !9)
!17 = !DILocation(line: 8, column: 21, scope: !9)
!18 = !DILocation(line: 8, column: 25, scope: !9)
!19 = !DILocation(line: 9, column: 15, scope: !20)
!20 = distinct !DILexicalBlock(scope: !9, file: !2, line: 8, column: 33)
!21 = !DILocation(line: 9, column: 21, scope: !20)
!22 = !DILocation(line: 9, column: 23, scope: !20)
!23 = !DILocation(line: 9, column: 9, scope: !20)
!24 = !DILocation(line: 8, column: 28, scope: !9)
!25 = !DILocation(line: 11, column: 1, scope: !9)
