compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__place__tests__identifier_deref_generates_as_expected.snap
---
source: compiler/zrc_codegen/src/expr/place.rs
description: "fn test() {\n    let x: *i32;\n\n    // TEST: x is *i32, so %let_x is **i32 (ptr to the stack). we should load from\n    // %let_x to obtain the actual pointer. we should then store to that result\n    // value (we should never load it)\n    *x = 4;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define {} @test() !dbg !3 {
entry:
  %let_x = alloca ptr, align 8
  call void @llvm.dbg.declare(metadata ptr %let_x, metadata !9, metadata !DIExpression()), !dbg !14
  %load = load ptr, ptr %let_x, align 8, !dbg !15
  store i32 4, ptr %load, align 4, !dbg !15
  ret {} zeroinitializer, !dbg !16
}

; Function Attrs: nocallback nofree nosync nounwind speculatable willreturn memory(none)
declare void @llvm.dbg.declare(metadata, metadata, metadata) #0

attributes #0 = { nocallback nofree nosync nounwind speculatable willreturn memory(none) }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1, retainedNodes: !8)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !{!9}
!9 = !DILocalVariable(name: "x", scope: !10, file: !2, line: 2, type: !12)
!10 = distinct !DILexicalBlock(scope: !11, file: !2, line: 1, column: 11)
!11 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 11)
!12 = !DIDerivedType(tag: DW_TAG_pointer_type, name: "\22i32\22", baseType: !13, dwarfAddressSpace: 0)
!13 = !DIBasicType(name: "i32")
!14 = !DILocation(line: 2, column: 9, scope: !10)
!15 = !DILocation(line: 7, column: 6, scope: !10)
!16 = !DILocation(line: 8, column: 1, scope: !10)
