compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__place__tests__struct_property_access_in_place_position.snap
---
source: compiler/zrc_codegen/src/expr/place.rs
description: "struct S { x: i32, y: i32 }\n\nfn test() {\n    let x: S;\n\n    // TEST: the value must NOT be loaded! it must simply gep to obtain a pointer,\n    // then `store` into that pointer.\n    x.y = 4;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define {} @test() !dbg !3 {
entry:
  %let_x = alloca { i32, i32 }, align 8
  %gep = getelementptr inbounds nuw { i32, i32 }, ptr %let_x, i32 0, i32 1, !dbg !8
  store i32 4, ptr %gep, align 4, !dbg !8
  ret {} zeroinitializer, !dbg !11
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test", linkageName: "test", scope: null, file: !2, line: 3, type: !4, scopeLine: 3, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DICompositeType(tag: DW_TAG_structure_type, name: "struct {}", scope: !2, file: !2, elements: !7)
!7 = !{}
!8 = !DILocation(line: 8, column: 5, scope: !9)
!9 = distinct !DILexicalBlock(scope: !10, file: !2, line: 3, column: 11)
!10 = distinct !DILexicalBlock(scope: !3, file: !2, line: 3, column: 11)
!11 = !DILocation(line: 9, column: 1, scope: !9)
